# omniparser-server

./: omniparserserver.py  pyproject.toml  utils.py
weights/icon_caption_florence/: model.safetensors
weights/icon_detect/: model.pt
