[tool.poetry]
name = "omniparser-server"
version = "0.1.0"
description = ""
authors = ["nalin <74811063+lordspline@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
supervision = "0.18.0"
opencv-python = "^4.11.0.86"
openai = "^1.64.0"
easyocr = "^1.7.2"
numpy = "1.26.4"
paddleocr = "^2.9.1"
paddlepaddle = "^2.6.2"
ultralytics = "^8.3.79"
transformers = "^4.49.0"
einops = "^0.8.1"
timm = "^1.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
